osconfig/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.19.1 on Tue Jun 11 16:38:58 2013
*mangle
:PREROUTING ACCEPT [6310:3064160]
:INPUT ACCEPT [6015:3042350]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3201:348062]
:POSTROUTING ACCEPT [3207:348839]
-A POSTROUTING -o lxc0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Tue Jun 11 16:38:58 2013
# Generated by iptables-save v1.4.19.1 on Tue Jun 11 16:38:58 2013
*filter
:INPUT ACCEPT [6013:3041675]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3201:348062]
-A INPUT -i lxc0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i lxc0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i lxc0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lxc0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.57.0/24 -o lxc0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.57.0/24 -i lxc0 -j ACCEPT
-A FORWARD -i lxc0 -o lxc0 -j ACCEPT
-A FORWARD -o lxc0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i lxc0 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue Jun 11 16:38:58 2013
# Generated by iptables-save v1.4.19.1 on Tue Jun 11 16:38:58 2013
*nat
:PREROUTING ACCEPT [1980:291202]
:INPUT ACCEPT [1685:269392]
:OUTPUT ACCEPT [385:45991]
:POSTROUTING ACCEPT [383:45803]
-A POSTROUTING -s 192.168.57.0/24 ! -d 192.168.57.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.57.0/24 ! -d 192.168.57.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.57.0/24 ! -d 192.168.57.0/24 -j MASQUERADE
COMMIT
# Completed on Tue Jun 11 16:38:58 2013
